# optmag

./: CMakeLists.txt
app/: CMakeLists.txt
app/constrained_optimizer/: CMakeLists.txt
app/constrained_optimizer/src/: conversions_arglib_arma.cpp  optimizer.cpp
app/constrained_optimizer_tests/src/: test_optimizer.cpp
app/optmag_app/: CMakeLists.txt
app/optmag_app/src/: optmag.cpp
app/symbolic_algebra/src/: algorithm_dfs.cpp  expression_pragma.cpp  modify_canonical_math.cpp  modify_detect_one_factor.cpp  modify_detect_zero_factor.cpp  modify_detect_zero_product.cpp  modify_eval_partial_prod.cpp  modify_eval_partial_sum.cpp  modify_flatten_factor.cpp  modify_flatten_product.cpp  modify_flatten_sum.cpp  modify_rebuild_factor_sum_into_sum_factors.cpp  modify_rebuild_prod_factors_into_factor_prod.cpp  modify_rebuild_prod_sum_into_sum_prod.cpp  modify_rebuild_sum_into_linear_combination.cpp  modify_remove_bridge_product.cpp  modify_remove_bridge_sum.cpp  modify_remove_const_ones_from_product.cpp  modify_remove_const_zeros_from_sum.cpp  modify_simplify_linear_combination.cpp  util_id.cpp
app/symbolic_algebra_tests/src/: test_calculate_expression_derivative.cpp  test_calculate_expression_value.cpp  test_expression_draining.cpp  test_expression_final_constant.cpp  test_expression_final_math_functions.cpp  test_expression_final_structural_blocks.cpp  test_expression_final_unary_functions.cpp  test_expression_final_variable.cpp  test_holistic.cpp  test_modify_detect_zero_factor.cpp  test_modify_detect_zero_product.cpp  test_modify_eval_partial_prod.cpp  (+10 more)
(+39 files in other folders)
